--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,6 +1,7 @@
 
+
 [Main]
-Updated=2022-04-13
+Updated=2022-04-26
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4465,20 +4466,6 @@ SLInitHook.x64=1
 SLInitOffset.x64=2730C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
-[10.0.18362.1533]
-LocalOnlyPatch.x64=1
-LocalOnlyOffset.x64=83075
-LocalOnlyCode.x64=jmpshort
-SingleUserPatch.x64=1
-SingleUserOffset.x64=0DC4C
-SingleUserCode.x64=Zero
-DefPolicyPatch.x64=1
-DefPolicyOffset.x64=1FE65
-DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
-SLInitHook.x64=1
-SLInitOffset.x64=22E9C
-SLInitFunc.x64=New_CSLQuery_Initialize
-
 [10.0.18362.2158]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=83585
@@ -4995,6 +4982,34 @@ DefPolicyOffset.x64=185D5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1C72C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1679]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89E21
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C8C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=187B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2048C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1682]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89E21
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C8C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=187B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2048C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19613.1000]
@@ -5770,6 +5785,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=26D20
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22000.652]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=991E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26E50
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.22449.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=97DD1
@@ -6121,6 +6150,20 @@ SLInitOffset.x64=28600
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22593.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B7E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22598.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=9B7E1
 LocalOnlyCode.x64=jmpshort
@@ -9118,6 +9161,26 @@ bMultimonAllowed.x64  =105014
 ulMaxDebugSessions.x64=105018
 bFUSEnabled.x64       =10501C
 
+[10.0.19041.1679-SLInit]
+bInitialized.x64      =1070F8
+bServerSku.x64        =1070FC
+lMaxUserSessions.x64  =107100
+bAppServerAllowed.x64 =107108
+bRemoteConnAllowed.x64=107110
+bMultimonAllowed.x64  =107114
+ulMaxDebugSessions.x64=107118
+bFUSEnabled.x64       =10711C
+
+[10.0.19041.1682-SLInit]
+bInitialized.x64      =1070F8
+bServerSku.x64        =1070FC
+lMaxUserSessions.x64  =107100
+bAppServerAllowed.x64 =107108
+bRemoteConnAllowed.x64=107110
+bMultimonAllowed.x64  =107114
+ulMaxDebugSessions.x64=107118
+bFUSEnabled.x64       =10711C
+
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
 bServerSku.x64        =117044
@@ -9668,6 +9731,16 @@ bMultimonAllowed.x64  =11FEE8
 ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
+[10.0.22000.652-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
 [10.0.22449.1000-SLInit]
 bInitialized.x64      =11FF0C
 bServerSku.x64        =11FF10
@@ -9919,6 +9992,16 @@ ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
 
 [10.0.22593.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22598.1-SLInit]
 bInitialized.x64      =128F2C
 bServerSku.x64        =128F30
 lMaxUserSessions.x64  =128F34
