--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,6 @@
 
-
 [Main]
-Updated=2022-04-26
+Updated=2022-05-09
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4719,6 +4718,18 @@ SLInitOffset.x64=1E98C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19041.1202]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B66B9
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BDE7
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E899
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=68809
+SLInitFunc.x86=New_CSLQuery_Initialize
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=89D81
 LocalOnlyCode.x64=jmpshort
@@ -4999,6 +5010,18 @@ SLInitOffset.x64=2048C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19041.1682]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B6839
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3B727
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E1D9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=68838
+SLInitFunc.x86=New_CSLQuery_Initialize
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=89E21
 LocalOnlyCode.x64=jmpshort
@@ -5515,6 +5538,20 @@ DefPolicyOffset.x64=1B8A5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=26790
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.20348.681]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9A1A1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08992
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B705
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=268A0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.21277.1000]
@@ -6164,6 +6201,34 @@ SLInitOffset.x64=286D0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22598.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B7E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22610.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B7E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22616.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=9B7E1
 LocalOnlyCode.x64=jmpshort
@@ -8976,6 +9041,14 @@ ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
 
 [10.0.19041.1202-SLInit]
+bInitialized.x86      =D1A04
+bServerSku.x86        =D1A08
+lMaxUserSessions.x86  =D1A0C
+bAppServerAllowed.x86 =D1A14
+bRemoteConnAllowed.x86=D1A1C
+bMultimonAllowed.x86  =D1A20
+ulMaxDebugSessions.x86=D1A24
+bFUSEnabled.x86       =D1A28
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
@@ -9172,6 +9245,14 @@ ulMaxDebugSessions.x64=107118
 bFUSEnabled.x64       =10711C
 
 [10.0.19041.1682-SLInit]
+bInitialized.x86      =D19E0
+bServerSku.x86        =D19E4
+lMaxUserSessions.x86  =D19E8
+bAppServerAllowed.x86 =D19F0
+bRemoteConnAllowed.x86=D19F8
+bMultimonAllowed.x86  =D19FC
+ulMaxDebugSessions.x86=D1A00
+bFUSEnabled.x86       =D1A04
 bInitialized.x64      =1070F8
 bServerSku.x64        =1070FC
 lMaxUserSessions.x64  =107100
@@ -9532,6 +9613,16 @@ ulMaxDebugSessions.x64=11FED0
 bFUSEnabled.x64       =11FED4
 
 [10.0.20348.617-SLInit]
+bInitialized.x64      =121FAC
+bServerSku.x64        =121FB0
+lMaxUserSessions.x64  =121FB4
+bAppServerAllowed.x64 =121FBC
+bRemoteConnAllowed.x64=121FC4
+bMultimonAllowed.x64  =121FC8
+ulMaxDebugSessions.x64=121FD0
+bFUSEnabled.x64       =121FD4
+
+[10.0.20348.681-SLInit]
 bInitialized.x64      =121FAC
 bServerSku.x64        =121FB0
 lMaxUserSessions.x64  =121FB4
@@ -10002,6 +10093,26 @@ ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
 
 [10.0.22598.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22610.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22616.1-SLInit]
 bInitialized.x64      =128F2C
 bServerSku.x64        =128F30
 lMaxUserSessions.x64  =128F34
