--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,10 @@
+; RDP Wrapper Library configuration
+; Do not modify without special knowledge
+; Edited by sebaxakerhtc
 
 [Main]
-Updated=2022-06-04
-LogFile=\earthterminal.txt
+Updated=2022-07-02
+LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
 
@@ -2030,6 +2033,20 @@ LocalOnlyOffset.x64=8CEE1
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x64=1
 SingleUserOffset.x64=25FA4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=29825
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=CA40
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.14393.5127]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8CEF1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=23CC8
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=29825
@@ -4265,6 +4282,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=2C29C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.3113]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A321
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D099
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FFA5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2C0AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18252.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=780B1
@@ -6436,6 +6467,62 @@ SLInitHook.x64=1
 SLInitOffset.x64=28DF0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.25136.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BAE1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28DF0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25140.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BC51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28F60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25145.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BC51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28F60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25151.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BC51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28F60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -7384,6 +7471,16 @@ ulMaxDebugSessions.x64=E747C
 bFUSEnabled.x64       =E7480
 
 [10.0.14393.4770-SLInit]
+bInitialized.x64      =E7470
+bServerSku.x64        =E63D0
+lMaxUserSessions.x64  =E63D4
+bAppServerAllowed.x64 =E63D8
+bRemoteConnAllowed.x64=E7474
+bMultimonAllowed.x64  =E7478
+ulMaxDebugSessions.x64=E747C
+bFUSEnabled.x64       =E7480
+
+[10.0.14393.5127-SLInit]
 bInitialized.x64      =E7470
 bServerSku.x64        =E63D0
 lMaxUserSessions.x64  =E63D4
@@ -8928,6 +9025,16 @@ bMultimonAllowed.x64  =114D34
 ulMaxDebugSessions.x64=114D38
 bFUSEnabled.x64       =114D3C
 
+[10.0.17763.3113-SLInit]
+bInitialized.x64      =114D1C
+bServerSku.x64        =114D20
+lMaxUserSessions.x64  =114D24
+bAppServerAllowed.x64 =114D2C
+bRemoteConnAllowed.x64=114D30
+bMultimonAllowed.x64  =114D34
+ulMaxDebugSessions.x64=114D38
+bFUSEnabled.x64       =114D3C
+
 [10.0.18252.1000-SLInit]
 bInitialized.x64      =ECAB0
 bServerSku.x64        =ECAB4
@@ -10453,3 +10560,43 @@ bRemoteConnAllowed.x64=128F44
 bMultimonAllowed.x64  =128F48
 ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
+
+[10.0.25136.1000-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.25140.1000-SLInit]
+bInitialized.x64      =128F4C
+bServerSku.x64        =128F50
+lMaxUserSessions.x64  =128F54
+bAppServerAllowed.x64 =128F5C
+bRemoteConnAllowed.x64=128F64
+bMultimonAllowed.x64  =128F68
+ulMaxDebugSessions.x64=128F70
+bFUSEnabled.x64       =128F74
+
+[10.0.25145.1000-SLInit]
+bInitialized.x64      =128F4C
+bServerSku.x64        =128F50
+lMaxUserSessions.x64  =128F54
+bAppServerAllowed.x64 =128F5C
+bRemoteConnAllowed.x64=128F64
+bMultimonAllowed.x64  =128F68
+ulMaxDebugSessions.x64=128F70
+bFUSEnabled.x64       =128F74
+
+[10.0.25151.1000-SLInit]
+bInitialized.x64      =128F4C
+bServerSku.x64        =128F50
+lMaxUserSessions.x64  =128F54
+bAppServerAllowed.x64 =128F5C
+bRemoteConnAllowed.x64=128F64
+bMultimonAllowed.x64  =128F68
+ulMaxDebugSessions.x64=128F70
+bFUSEnabled.x64       =128F74
